--- a/_includes/codeSchema.html
+++ b/_includes/codeSchema.html
@@ -45,7 +45,7 @@
                     </li>
                     <li>
                     <details open>
-                        <summary>name [string]</summary>
+                        <summary>name <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
                         <h5>{{ site.NameContactCode[page.lang] }}</h5>
                         <p>{{ site.NameContactCodeDesc[page.lang] }}</p>
                     </details>
