--- a/_includes/codeSchema.html
+++ b/_includes/codeSchema.html
@@ -70,7 +70,7 @@
                     <details open>
                         <summary>created <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
                         <h5>{{ site.CodeCreated[page.lang] }}</h5>
-                        <p>{{ site.DateCreatedCodeDesc[page.lang] }}</p>
+                        <p>{{ site.CreatedCodeDesc[page.lang] }}</p>
                     </details>
                     </li>
                     <li>
@@ -271,7 +271,7 @@
             <li>
             <details open> 
                 <summary>status [string]</summary>
-                <h5>{{ site.StatusName[page.lang] }}</h5>
+                <h5>{{ site.StatusCodeName[page.lang] }}</h5>
                 <p>{{ site.StatusCodeDesc[page.lang] }}</p>
             </details>
             </li>
