--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -123,7 +123,7 @@
     {% assign languages_array = languages_array | uniq  %}
     {% for language in languages_array %}
       <div class="checkbox" >
-        <label><input class="{{ language }}" type="checkbox" value="{{ language }}" name="{{ language }}"> {{ language  }} </label>
+        <label><input class="{{ language }}" datafor="languages" type="checkbox" value="{{ language }}" name="{{ language }}"> {{ language  }} </label>
       </div>
     {% endfor %}
   
