fix a bug in my github master branch

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -247,6 +247,7 @@
         $('#selectedProject').empty();
         arraySections.length = 0;
         selectedAdminCode = $("#adminCode").val();
+        $(':input').val('');
         $('#shemaVersion').val('1.0');
         removeTags();
 
