Add Reset button for form

--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -249,6 +249,7 @@
     </div>
   
   <button id="prbotSubmit" type="button" class="btn btn-primary">Submit</button>
+  <button id="codeFormReset" type="reset" class="btn btn-default">Reset</button>
 
   <h3 id="prbotSubmitAlertInProgress" class="alert alert-warning" style='display: none'>
     <p>{{ site.FormSubmissionInProgress[page.lang]}}</p>
