--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -242,6 +242,16 @@
       <input class="form-control" id="vcs" name="vcs" type="text" pattern="[A-Za-z\s]" data-rule-lettersonly="true" />
     </div>
 
+  <h2>GitHub informations</h2>
+    <div class="form-group">
+      <label for="gitHubUsername" class="required">Username <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+      <input class="form-control" id="gitHubUsername" name="gitHubUsername" type="text" pattern="[A-Za-z\s]" required="required"/>
+    </div>
+    <div class="form-group">
+      <label for="gitHubEmail" class="required">Email <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+      <input class="form-control" id="gitHubEmail" name="gitHubEmail" type="email" required="required"/>
+    </div>
+
   <h2>{{ site.VersionCodeDesc[page.lang] }}</h2>
     <div class="form-group">
       <label for="versionProject">{{ site.VersionName[page.lang] }}</label>
