--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -247,6 +247,17 @@
       <label for="versionProject">{{ site.VersionName[page.lang] }}</label>
       <input class="form-control" id="versionProject" name="versionProject" type="text" />
     </div>
+
+  <h2>GitHub informations</h2>
+    <div class="form-group">
+      <label for="gitHubUsername" class="required">Username <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+      <input class="form-control" id="gitHubUsername" name="gitHubUsername" type="text" pattern="[A-Za-z\s]" required="required"/>
+    </div>
+    <div class="form-group">
+      <label for="gitHubEmail" class="required">Email <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+      <input class="form-control" id="gitHubEmail" name="gitHubEmail" type="email" required="required"/>
+    </div>
+
     <button id="prbotSubmit" type="button" class="btn btn-default">Submit</button>
   </form>
   </div>
