Alert when submitting form and fail/success. Redirect to home page on success

--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -254,9 +254,12 @@
   <h3 id="prbotSubmitAlertInProgress" class="alert alert-warning" style='display: none'>
     <p>{{ site.FormSubmissionInProgress[page.lang]}}</p>
   </h3>
-
   <h3 id="prbotSubmitAlertFail" class="alert alert-danger" style='display: none'>
     <p>{{ site.FormSubmissionFail[page.lang]}}</p>
   </h3>
+  <h3 id="prbotSubmitAlertSuccess" class="alert alert-success" style='display: none'>
+    <p>{{ site.FormSubmissionSuccess[page.lang]}}</p>
+  </h3>
+
   </form>
   </div>
