--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -248,13 +248,13 @@
       <input class="form-control" id="versionProject" name="versionProject" type="text" />
     </div>
 
-  <h2>GitHub informations</h2>
+  <h2>{{ site.GitHubAccount[page.lang] }}</h2>
     <div class="form-group">
-      <label for="gitHubUsername" class="required">Username <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+      <label for="gitHubUsername" class="required">{{ site.NameContactCode[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <input class="form-control" id="gitHubUsername" name="gitHubUsername" type="text" pattern="[A-Za-z\s]" required="required"/>
     </div>
     <div class="form-group">
-      <label for="gitHubEmail" class="required">Email <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+      <label for="gitHubEmail" class="required">{{ site.EmailContactCode[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <input class="form-control" id="gitHubEmail" name="gitHubEmail" type="email" required="required"/>
     </div>
 
