--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -251,15 +251,15 @@
   <button id="prbotSubmit" type="button" class="btn btn-primary">Submit</button>
   <button id="codeFormReset" type="reset" class="btn btn-default">Reset</button>
 
-  <div style='margin-top: 10px'>
-    <div id="prbotSubmitAlertInProgress" class="alert alert-warning" style='display: none'>
-      <h3>{{ site.FormSubmissionInProgress[page.lang]}}</h3>
+  <div style="margin-top: 10px">
+    <div id="prbotSubmitAlertInProgress" class="alert alert-warning" style="display: none">
+      <b>{{ site.FormSubmissionInProgress[page.lang]}}</b>
     </div>
-    <div id="prbotSubmitAlertFail" class="alert alert-danger" style='display: none'>
-      <h3>{{ site.FormSubmissionFail[page.lang]}}</h3>
+    <div id="prbotSubmitAlertFail" class="alert alert-danger" style="display: none">
+      <b>{{ site.FormSubmissionFail[page.lang]}}</b>
     </div>
-    <div id="prbotSubmitAlertSuccess" class="alert alert-success" style='display: none'>
-      <h3>{{ site.FormSubmissionSuccess[page.lang]}}</h3>
+    <div id="prbotSubmitAlertSuccess" class="alert alert-success" style="display: none">
+      <b3>{{ site.FormSubmissionSuccess[page.lang]}}</b>
     </div>
   </div>
 
