--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -259,7 +259,7 @@
       <b>{{ site.FormSubmissionFail[page.lang]}}</b>
     </div>
     <div id="prbotSubmitAlertSuccess" class="alert alert-success" style="display: none">
-      <b3>{{ site.FormSubmissionSuccess[page.lang]}}</b>
+      <b>{{ site.FormSubmissionSuccess[page.lang]}}</b>
     </div>
   </div>
 
