--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -68,6 +68,7 @@
 <script type="text/javascript" src="../assets/js/src/deep-object.js"></script>
 <script type="text/javascript" src="../assets/js/src/git-file-manager.js"></script>
 <script type="text/javascript" src="../assets/js/src/index.js"></script>
+<script type="text/javascript" src="../assets/js/src/custom-form-validation.js"></script>
 <script>
 
   const REPO_NAME = "{{ site.github_repository }}";
