Display an alert when submitting OSC form (#191)
* Validation of input & alerts

* Moved form submission (creating PR) into different function

* Add Reset button for form

* Alert when submitting form and fail/success. Redirect to home page on success

* Disable submit/reset buttons on form submission

* Prettify code

* Fixing html

* Formatting

* Fix errors

--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -247,6 +247,21 @@
       <label for="versionProject">{{ site.VersionName[page.lang] }}</label>
       <input class="form-control" id="versionProject" name="versionProject" type="text" />
     </div>
-    <button id="prbotSubmit" type="button" class="btn btn-default">Submit</button>
+  
+  <button id="prbotSubmit" type="button" class="btn btn-primary">Submit</button>
+  <button id="codeFormReset" type="reset" class="btn btn-default">Reset</button>
+
+  <div style="margin-top: 10px">
+    <div id="prbotSubmitAlertInProgress" class="alert alert-warning" style="display: none">
+      <b>{{ site.FormSubmissionInProgress[page.lang]}}</b>
+    </div>
+    <div id="prbotSubmitAlertFail" class="alert alert-danger" style="display: none">
+      <b>{{ site.FormSubmissionFail[page.lang]}}</b>
+    </div>
+    <div id="prbotSubmitAlertSuccess" class="alert alert-success" style="display: none">
+      <b>{{ site.FormSubmissionSuccess[page.lang]}}</b>
+    </div>
+  </div>
+
   </form>
   </div>
