--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -248,7 +248,7 @@
       <input class="form-control" id="versionProject" name="versionProject" type="text" />
     </div>
 
-  <h2>{{ site.GitHubAccount[page.lang] }}</h2>
+  <h2>{{ site.InformationAboutSubmitter[page.lang] }}</h2>
     <div class="form-group">
       <label for="gitHubUsername" class="required">{{ site.NameContactCode[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <input class="form-control" id="gitHubUsername" name="gitHubUsername" type="text" pattern="[A-Za-z\s]" required="required"/>
