--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -250,12 +250,12 @@
 
   <h2>{{ site.InformationAboutSubmitter[page.lang] }}</h2>
     <div class="form-group">
-      <label for="gitHubUsername" class="required">{{ site.NameContactCode[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
-      <input class="form-control" id="gitHubUsername" name="gitHubUsername" type="text" pattern="[A-Za-z\s]" required="required"/>
+      <label for="submitterUsername" class="required">{{ site.NameContactCode[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+      <input class="form-control" id="submitterUsername" name="submitterUsername" type="text" pattern="[A-Za-z\s]" required="required"/>
     </div>
     <div class="form-group">
-      <label for="gitHubEmail" class="required">{{ site.EmailContactCode[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
-      <input class="form-control" id="gitHubEmail" name="gitHubEmail" type="email" required="required"/>
+      <label for="submitterEmail" class="required">{{ site.EmailContactCode[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+      <input class="form-control" id="submitterEmail" name="submitterEmail" type="email" required="required"/>
     </div>
   
   <button id="prbotSubmit" type="button" class="btn btn-primary">Submit</button>
