--- a/_includes/ossSchema.html
+++ b/_includes/ossSchema.html
@@ -141,9 +141,9 @@
                         <ul class="list-unstyled">
                             <li>
                             <details open>
-                                <summary>created <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
-                                <h5>{{ site.CodeCreated[page.lang] }}</h5>
-                                <p>{{ site.DateCreatedCodeDesc[page.lang] }}</p>
+                                <summary>started <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
+                                <h5>{{ site.CodeStarted[page.lang] }}</h5>
+                                <p>{{ site.StartedCodeDesc[page.lang] }}</p>
                             </details>
                             </li>
                             <li>
