--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -80,15 +80,24 @@
   var pName = "";
 
   function addMoreLanguages(){
-    //in progress
-    }
+    $(`<div class="control-group input-group col-xs-2" style="margin-top:10px" >
+          <input type="text" name="language" class="form-control" required="required">
+          <div class="input-group-btn"> 
+            <button class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
+          </div>
+        </div>`).appendTo("#codeLanguages");
+
+    $(document).ready(function() {
+      $(this).parents(".control-group").remove();
+    });
+  }
 
   function addMoreTags(){
     $(`<label class="required" for="tag">{{ site.TagsCodeEN[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>`).appendTo("#tagsEN");
     $(`<label class="required" for="tag">{{ site.TagsCodeFR[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>`).appendTo("#tagsFR");
     
     $(`<div class="input-group control-group after-add-more col-xs-2">
-        <button class="btn btn-primary add-more" type="button"><i class="glyphicon glyphicon-plus"></i> add</button>
+        <button class="btn btn-primary add-more" type="button"><i class="glyphicon glyphicon-plus"></i> Add more tags</button>
        </div>`).insertAfter("#tags");
 
     $(`<div class="copy hide">
