--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -230,7 +230,7 @@
       <div id="tagsEN" class="form-group">
         <div>
           <div class="control-group input-group col-xs-2" style="margin-top:10px" >
-            <input type="text" id="tag" name="tag" class="form-control" required="required">
+            <input type="text" id="tagEN" name="tagEN" class="form-control" required="required">
             <div class="input-group-btn">
               <button class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
             </div>
@@ -240,7 +240,7 @@
       <div id="tagsFR" class="form-group">
         <div>
           <div class="control-group input-group col-xs-2" style="margin-top:10px" >
-            <input type="text" id="tag" name="tag" class="form-control" required="required">
+            <input type="text" id="tagFR" name="tagFR" class="form-control" required="required">
             <div class="input-group-btn">
               <button class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
             </div>
