--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -204,6 +204,9 @@
     }
     
     $("#validation").find('input').val(function(){
+      if (!datas_form[this.id] && this.type === 'checkbox') {
+        return this.value;
+      }
       return datas_form[this.id];
     });
 
@@ -247,7 +250,7 @@
         $('#selectedProject').empty();
         arraySections.length = 0;
         selectedAdminCode = $("#adminCode").val();
-        $(':input').val('');
+        $(':input:not(input[type="checkbox"])').val('');
         $('#shemaVersion').val('1.0');
         removeTags();
 
