--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -82,7 +82,7 @@
 
   function addMoreLanguages(){
     $(`<div class="control-group input-group col-xs-2" style="margin-top:10px" >
-          <input type="text" name="language" class="form-control" required="required">
+          <input type="text" id="${'_' + Math.random().toString(36).substr(2, 9)}" name="language" class="form-control" required="required">
           <div class="input-group-btn">
             <button class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
           </div>
