Add optional fields (#240)
* Switched to using an object based file merge.

We were using string based before.

* Fixed new file creation.

* Added required fields first.

* Update to use proper variable names.

* Remove duplicate id.

* Added identifier for languages used in project.

* Added optional fields.

* Map languages to array.

* Fix for removing value fields on checkboxes.

* Fixed replacing existing object in GitFileManager.

* Resolved missing id error.

* Fixed phone number showing up as name.

* Added language attribute.

* Converted datafor to data-for.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -82,7 +82,7 @@
 
   function addMoreLanguages(){
     $(`<div class="control-group input-group col-xs-2" style="margin-top:10px" >
-          <input type="text" name="language" class="form-control" required="required">
+          <input type="text" id="${'_' + Math.random().toString(36).substr(2, 9)}" name="language" data-for="languages" class="form-control" required="required">
           <div class="input-group-btn">
             <button class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
           </div>
@@ -211,6 +211,9 @@
     }
     
     $("#validation").find('input').val(function(){
+      if (!datas_form[this.id] && this.type === 'checkbox') {
+        return this.value;
+      }
       return datas_form[this.id];
     });
 
